# jush

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  jush.c
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
debian/: changelog  control  copyright  watch
lib/: .gitignore  strlcat.c  strlcpy.c
src/: .gitignore  Makefile.am  builtin.c  complete.c  expand.c  jobs.c  jush.c  jush.h  recompose.c
