AC_INIT(jush, 0.1, https://github.com/troglobit/jush/issues,, https://github.com/troglobit/jush/)
AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz])

AC_CONFIG_SRCDIR([jush.c])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])

AC_PROG_CC
AC_PROG_INSTALL

AC_HEADER_STDC

PKG_CHECK_MODULES([editline],  [libeditline >= 1.13.0])

AC_OUTPUT
